syntax = "proto3";

package rs.devtools.meta;

import "google/protobuf/duration.proto";

service Metadata {
    rpc GetAppMetadata(AppMetadataRequest) returns (AppMetadata) {}
    rpc GetInstrumentationMetadata(InstrumentationMetadataRequest) returns (InstrumentationMetadata) {}
}

message AppMetadataRequest {}

message AppMetadata {
    /// The apps name.
    string name = 1;
    /// The apps version.
    string version = 2;
    /// The apps authors.
    string authors = 3;
    /// The apps description.
    string description = 4;
    /// The Operating System the app is running on.
    /// 
    /// Possible values are:
    /// - "windows"
    /// - "macos"
    /// - "ios"
    /// - "linux"
    /// - "android"
    string os = 5;
    /// The CPU architecture the app is running on.
    /// 
    /// Possible values include:
    /// - "x86_64"
    /// - "aarch64"
    /// - "x86"
    /// - "arm" 
    string arch = 6;
    /// Whether the app was compiled with debug assertions enabled.
    bool debug_assertions = 7;
}

message InstrumentationMetadataRequest {}

message InstrumentationMetadata {
    // the version of the instrumentation crate used
    string version = 1;
    // the publish interval configured for the instrumentation
    // NOTE: This is not a stable property and might be removed at any time
    // DO NOT RELY ON THIS
    optional google.protobuf.Duration publish_interval = 99;
}